# inimeg

./: .gitignore  Cargo.toml  default.nix  flake.nix  rust-toolchain.toml
src/: cli.rs  handler.rs  main.rs  request.rs  response.rs  server.rs  status.rs
