[package]
name = "inimeg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.56", features = ["derive"] }
log = "0.4.29"
rustls = { version = "0.23.36", features = ["aws-lc-rs"] }
rustls-util = "0.0.1"
thiserror = "2.0.18"
url = "2.5.8"
webpki-roots = "1.0.5"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.24.0"
